@@ -36,8 +36,10 @@
 #include <string.h>
 
 static CFTypeID _kCFAttributedStringTypeID = 0;
+static CFDictionaryRef _kCFAttributedStringBlankAttribute = NULL;
 static CFMutableBagRef _kCFAttributedStringCache = NULL;
 static GSMutex _kCFAttributedStringCacheLock;
+static GSMutex _kCFAttributedStringBlankAttributeLock;
 
 typedef struct
 {
@@ -60,14 +62,13 @@ struct __CFMutableAttributedString
   Attr         *_attribs;
   CFIndex       _attribCount;
   CFIndex       _attribCap;
-  CFIndex       _attribsAdded;
+  CFIndex       _isEditing;
 };
 
 enum
 {
   _kCFAttributedStringIsInline =  (1<<0),
-  _kCFAttributedStringIsMutable = (1<<1),
-  _kCFAttributedStringIsEditing = (1<<2)
+  _kCFAttributedStringIsMutable = (1<<1)
 };
 
 CF_INLINE Boolean
@@ -81,13 +82,6 @@ CF_INLINE Boolean
 CFAttributedStringIsMutable (CFAttributedStringRef str)
 {
   return ((CFRuntimeBase *)str)->_flags.info & _kCFAttributedStringIsMutable ?
-    true : false;
-}
-
-CF_INLINE Boolean
-CFAttributedStringIsEditing (CFAttributedStringRef str)
-{
-  return ((CFRuntimeBase *)str)->_flags.info & _kCFAttributedStringIsEditing ?
     true : false;
 }
 
@@ -122,8 +116,12 @@ CFAttributedStringCacheAttribute (CFDictionaryRef attribs)
   
   if (cachedAttr == NULL)
     {
-      CFBagAddValue (_kCFAttributedStringCache, attribs);
-      cachedAttr = attribs;
+      CFDictionaryRef insert;
+      
+      insert = CFDictionaryCreateCopy (NULL, attribs);
+      CFBagAddValue (_kCFAttributedStringCache, insert);
+      cachedAttr = insert;
+      CFRelease (insert);
     }
   
   GSMutexUnlock (&_kCFAttributedStringCacheLock);
@@ -139,6 +137,72 @@ CFAttributedStringUncacheAttribute (CFDictionaryRef attribs)
   CFBagRemoveValue (_kCFAttributedStringCache, attribs);
   
   GSMutexUnlock (&_kCFAttributedStringCacheLock);
+}
+
+static CFDictionaryRef
+CFAttributedStringGetBlankAttribute (void)
+{
+  if (_kCFAttributedStringBlankAttribute == NULL)
+    {
+      GSMutexLock (&_kCFAttributedStringBlankAttributeLock);
+      if (_kCFAttributedStringBlankAttribute == NULL)
+        {
+          _kCFAttributedStringBlankAttribute = CFDictionaryCreate (NULL,
+            NULL, NULL, 0,
+            &kCFCopyStringDictionaryKeyCallBacks,
+            &kCFTypeDictionaryValueCallBacks);
+          /* Cache the blank attribute in case anyone wants to use it. */
+          CFAttributedStringCacheAttribute (_kCFAttributedStringBlankAttribute);
+          CFRelease (_kCFAttributedStringBlankAttribute);
+        }
+      GSMutexUnlock (&_kCFAttributedStringBlankAttributeLock);
+    }
+  
+  return _kCFAttributedStringBlankAttribute;
+}
+
+static CFComparisonResult
+CFAttributedStringCompareAttribute (const void *v1, const void *v2, void *ctxt)
+{
+  Attr *attr1 = (Attr*)v1;
+  Attr *attr2 = (Attr*)v2;
+  
+  return attr1->index < attr2->index ? kCFCompareLessThan :
+    (attr1->index == attr2->index ? kCFCompareEqualTo : kCFCompareGreaterThan);
+}
+
+static CFIndex
+CFAttributedStringArrayGetIndex (CFAttributedStringRef str, CFIndex loc,
+                                 CFRange *effRange)
+{
+  /* This function does exactly the same things as
+   * CFAttributedStringGetAttributes() but does not check if str is
+   * an ObjC object and returns an index instead of a CFDictionaryRef.
+   */
+  CFIndex idx;
+  Attr attr;
+  
+  attr.index = loc;
+  idx = GSBSearch (str->_attribs, &attr, CFRangeMake(0, str->_attribCount),
+                   sizeof(Attr), CFAttributedStringCompareAttribute, NULL);
+  
+  if (effRange)
+    {
+      CFIndex start;
+      CFIndex end;
+      
+      start = str->_attribs[idx].index;
+      effRange->location = start;
+      
+      if (idx < str->_attribCount - 1)
+        end = str->_attribs[idx + 1].index;
+      else
+        end = CFStringGetLength(str->_string);
+      
+      effRange->length = end - start;
+    }
+  
+  return idx;
 }
 
 static void
@@ -207,6 +271,7 @@ void CFAttributedStringInitialize (void)
   _kCFAttributedStringTypeID =
     _CFRuntimeRegisterClass (&CFAttributedStringClass);
   GSMutexInitialize (&_kCFAttributedStringCacheLock);
+  GSMutexInitialize (&_kCFAttributedStringBlankAttributeLock);
 }
 
 
@@ -337,45 +402,16 @@ CFAttributedStringGetAttribute (CFAttributedStringRef str, CFIndex loc,
   return CFDictionaryGetValue (attribs, attrName);
 }
 
-static CFComparisonResult
-CFAttributedStringCompareAttribute (const void *v1, const void *v2, void *ctxt)
-{
-  Attr *attr1 = (Attr*)v1;
-  Attr *attr2 = (Attr*)v2;
-  
-  return attr1->index < attr2->index ? kCFCompareLessThan :
-    (attr1->index == attr2->index ? kCFCompareEqualTo : kCFCompareGreaterThan);
-}
-
 CFDictionaryRef
 CFAttributedStringGetAttributes (CFAttributedStringRef str, CFIndex loc,
                                  CFRange *effRange)
 {
-  Attr attr;
   CFIndex idx;
   
   CF_OBJC_FUNCDISPATCH2 (_kCFAttributedStringTypeID, CFDictionaryRef, str,
                          "attributesAtIndex:effectiveRange:", loc, effRange);
   
-  attr.index = loc;
-  idx = GSBSearch (str->_attribs, &attr, CFRangeMake(0, str->_attribCount),
-                   sizeof(Attr), CFAttributedStringCompareAttribute, NULL);
-  
-  if (effRange)
-    {
-      CFIndex start;
-      CFIndex end;
-      
-      start = str->_attribs[idx].index;
-      effRange->location = start;
-      
-      if (idx < str->_attribCount - 1)
-        end = str->_attribs[idx + 1].index;
-      else
-        end = CFStringGetLength(str->_string);
-      
-      effRange->length = end - start;
-    }
+  idx = CFAttributedStringArrayGetIndex (str, loc, effRange);
   
   return str->_attribs[idx].attrib;
 }
@@ -398,39 +434,152 @@ CFAttributedStringGetAttributesAndLongestEffectiveRange (
 
 
 
-/*static void
-InsertAtIndex (CFMutableAttributedStringRef str, CFIndex loc,
-               CFDictionaryRef attrib, CFIndex idx)
+static void
+InsertAttributesAtIndex (CFMutableAttributedStringRef str, CFIndex idx,
+                         CFIndex strIdx, CFDictionaryRef attrib)
 {
-  if (str->_attribCount == str->_attribCap)
+  struct __CFMutableAttributedString *working;
+  CFAllocatorRef alloc;
+  const Attr *stop;
+  Attr *prev;
+  Attr *cur;
+  
+  working = (struct __CFMutableAttributedString *)str;
+  alloc = CFGetAllocator (working);
+  if (working->_attribCount == working->_attribCap)
     {
-      str->_attribs = CFAllocatorReallocate (CFGetAllocator(str),
-                                             str->_attribs,
-                                             str->_attribCap + 16, 0);
-      memset (str->_attribs + (str->_attribCount * sizeof(Attr)), 0,
-              16 * sizeof(Attr));
+      /* Grow */
+      working->_attribs = CFAllocatorReallocate (alloc,
+                                                 working->_attribs,
+                                                 (working->_attribCap << 1),
+                                                 0);
     }
   
-  if (idx < str->_attribCount)
+  /* Move things to the right */
+  stop = &working->_attribs[idx];
+  cur = &working->_attribs[working->_attribCount];
+  prev = cur - 1;
+  while (cur > stop)
+    *cur-- = *prev--;
+  working->_attribCount += 1;
+  
+  /* Insert the new attribute */
+  cur->index = strIdx;
+  cur->attrib = CFAttributedStringCacheAttribute (attrib);
+}
+
+static void
+ReplaceAttributesAtIndex (CFMutableAttributedStringRef str, CFIndex idx,
+                          CFDictionaryRef repl)
+{
+  CFAttributedStringUncacheAttribute (str->_attribs[idx].attrib);
+  str->_attribs[idx].attrib =
+    CFAttributedStringCacheAttribute (str->_attribs[idx].attrib);
+}
+
+static void
+SetAttributesAtIndex (CFMutableAttributedStringRef str, CFIndex idx,
+                      CFDictionaryRef repl)
+{
+  CFMutableDictionaryRef dict;
+  CFIndex count;
+  CFIndex i;
+  const void **keys;
+  const void ** values;
+  
+  dict = CFDictionaryCreateMutableCopy (NULL, 0, str->_attribs[idx].attrib);
+  count = CFDictionaryGetCount (repl);
+  keys = CFAllocatorAllocate (NULL, count * sizeof(void*) * 2, 0);
+  values = keys + count;
+  CFDictionaryGetKeysAndValues (repl, keys, values);
+  for (i = 0 ; i < count ; ++i)
+    CFDictionarySetValue (dict, keys[i], values[i]);
+  
+  CFAttributedStringUncacheAttribute (str->_attribs[idx].attrib);
+  str->_attribs[idx].attrib = CFAttributedStringCacheAttribute (dict);
+  
+  CFAllocatorDeallocate (NULL, keys);
+  CFRelease (dict);
+}
+
+static void
+RemoveAttributesAtIndex (CFMutableAttributedStringRef str, CFRange range)
+{
+  if (range.length > 0)
     {
-      Attr *cur;
+      struct __CFMutableAttributedString *working;
+      CFAllocatorRef alloc;
       const Attr *stop;
+      Attr *next;
+      Attr *cur;
       
-      cur = str->_attribs + str->_attribCount;
-      stop = str->_attribs + idx;
-      while (stop < cur)
+      working = (struct __CFMutableAttributedString *)str;
+      alloc = CFGetAllocator (working);
+      /* Move things to the left */
+      cur = &working->_attribs[range.location];
+      stop = cur + range.length;
+      while (cur < stop)
         {
-          cur->index = cur[-1].index;
-          cur->attrib = cur[-1].attrib;
-          --cur;
+          CFAttributedStringUncacheAttribute (cur->attrib);
+          cur++;
+        }
+      
+      cur = &working->_attribs[range.location];
+      next = cur + range.length;
+      stop = cur + (working->_attribCount - (range.location + range.length) - 1);
+      while (cur < stop)
+        *cur++ = *next++;
+      working->_attribCount -= range.length;
+      
+      if (working->_attribCount < (working->_attribCap >> 2)
+          && working->_attribCount > 9)
+        {
+          /* Shrink */
+          working->_attribs = CFAllocatorReallocate (alloc,
+                                                     working->_attribs,
+                                                     (working->_attribCap >> 1),
+                                                     0);
         }
     }
+}
+
+static void
+CFAttributedStringCoalesce (CFMutableAttributedStringRef str, CFRange range)
+{
+  struct __CFMutableAttributedString *working;
   
-  str->_attribs[idx].index = loc;
-  str->_attribs[idx].attrib = CFAttributedStringCacheAttribute (attrib);
+  working = (struct __CFMutableAttributedString *)str;
   
-  str->_attribCount += 1;
-}*/
+  if (working->_isEditing == 0)
+    {
+      CFIndex cur;
+      CFIndex end;
+      Attr *array;
+      
+      array = working->_attribs;
+      if (range.location > 0)
+        {
+          if (array[range.location - 1].attrib == array[range.location].attrib)
+            {
+              RemoveAttributesAtIndex (str, CFRangeMake (range.location, 1));
+              range.length -= 1;
+            }
+        }
+      
+      cur = range.location;
+      end = range.location + range.length;
+      
+      while (cur < end)
+        {
+          if (array[cur - 1].attrib == array[cur].attrib)
+            {
+              RemoveAttributesAtIndex (str, CFRangeMake (cur, 1));
+              end -= 1;
+            }
+          cur++;
+        }
+    }
+}
 
 #define CFMUTABLEATTRIBUTESTRING_SIZE sizeof(CFRuntimeClass) \
   - sizeof(struct __CFMutableAttributedString)
@@ -445,9 +594,12 @@ CFAttributedStringCreateMutable (CFAllocatorRef alloc, CFIndex maxLength)
   if (new)
     {
       new->_string = CFStringCreateMutable (alloc, maxLength);
-      /* Minimum size is 16 */
-      new->_attribCap = 16;
-      new->_attribs = (Attr*)CFAllocatorAllocate (alloc, sizeof(Attr) * 16, 0);
+      /* Minimum size is 8 */
+      new->_attribCap = 8;
+      new->_attribs = (Attr*)CFAllocatorAllocate (alloc, sizeof(Attr) * 8, 0);
+      new->_attribCount = 1;
+      new->_attribs[0].index = 0;
+      new->_attribs[0].attrib = CFAttributedStringGetBlankAttribute ();
       
       CFAttributedStringSetMutable ((CFAttributedStringRef)new);
     }
@@ -461,25 +613,28 @@ CFAttributedStringCreateMutableCopy (CFAllocatorRef alloc, CFIndex maxLength,
 {
   CFMutableAttributedStringRef new;
   CFRange r;
+  CFIndex idx;
   CFIndex cur;
   CFIndex strLen;
   
   new = CFAttributedStringCreateMutable (alloc, maxLength);
   
-  /* See note in CFAttributedStringCreateCopy() relating to being/end editing.
-   */
   strLen = CFAttributedStringGetLength (str);
-  CFAttributedStringReplaceString (new, CFRangeMake (0, strLen),
+  CFAttributedStringReplaceString (new, CFRangeMake (0, 0),
                                    CFAttributedStringGetString (str));
+  RemoveAttributesAtIndex (new, CFRangeMake (0, 1));
+  
   cur = 0;
+  idx = 0;
   do
     {
       CFDictionaryRef attribs;
       
       attribs = CFAttributedStringGetAttributes (str, cur, &r);
-      CFAttributedStringSetAttributes (new, r, attribs, true);
+      InsertAttributesAtIndex (new, idx, cur, attribs);
       
       cur = r.location + r.length;
+      idx++;
     } while (cur < strLen);
   
   return new;
@@ -491,7 +646,7 @@ CFAttributedStringBeginEditing (CFMutableAttributedStringRef str)
   CF_OBJC_FUNCDISPATCH0 (_kCFAttributedStringTypeID, void, str,
                          "beginEditing");
   
-  ((CFRuntimeBase*)str)->_flags.info |= _kCFAttributedStringIsEditing;
+  ((struct __CFMutableAttributedString *)str)->_isEditing += 1;
 }
 
 void
@@ -500,7 +655,8 @@ CFAttributedStringEndEditing (CFMutableAttributedStringRef str)
   CF_OBJC_FUNCDISPATCH0 (_kCFAttributedStringTypeID, void, str,
                          "endEditing");
   
-  ((CFRuntimeBase*)str)->_flags.info &= ~_kCFAttributedStringIsEditing;
+  if ((((struct __CFMutableAttributedString *)str)->_isEditing -= 1) == 0)
+    CFAttributedStringCoalesce (str, CFRangeMake (0, str->_attribCount));
 }
 
 CFMutableStringRef
@@ -509,10 +665,7 @@ CFAttributedStringGetMutableString (CFMutableAttributedStringRef str)
   CF_OBJC_FUNCDISPATCH0 (_kCFAttributedStringTypeID, CFMutableStringRef, str,
                          "mutableString");
   
-  if (CFAttributedStringIsMutable(str))
-    return (CFMutableStringRef)str->_string;
-  
-  return NULL;
+  return NULL; /* FIXME */
 }
 
 void
@@ -524,17 +677,38 @@ CFAttributedStringRemoveAttribute (CFMutableAttributedStringRef str,
   
   if (!CFAttributedStringIsMutable(str))
     return;
+  /* FIXME */
 }
 
 void
 CFAttributedStringReplaceString (CFMutableAttributedStringRef str,
                                  CFRange range, CFStringRef repl)
 {
+  CFIndex idxS;
+  CFIndex idxE;
+  CFIndex cur;
+  CFIndex moveAmount;
+  
   CF_OBJC_FUNCDISPATCH2 (_kCFAttributedStringTypeID, void, str,
                          "replaceCharactersInRange:withString:", range, repl);
   
   if (!CFAttributedStringIsMutable(str))
     return;
+  
+  CFStringReplace ((CFMutableStringRef)str->_string, range, repl);
+  idxS = CFAttributedStringArrayGetIndex (str, range.location, NULL);
+  idxE = CFAttributedStringArrayGetIndex (str,
+                                          range.location + range.length - 1,
+                                          NULL);
+  RemoveAttributesAtIndex (str, CFRangeMake (idxS, idxE - idxS));
+  
+  /* Need to move the attributes */
+  moveAmount = CFStringGetLength (repl) - range.length;
+  cur = idxS + 1;
+  while (cur < str->_attribCount)
+    str->_attribs[cur++].index += moveAmount;
+  
+  CFAttributedStringCoalesce (str, CFRangeMake (idxS, idxE - idxS));
 }
 
 void
@@ -554,11 +728,20 @@ void
 CFAttributedStringSetAttribute (CFMutableAttributedStringRef str,
   CFRange range, CFStringRef attrName, CFTypeRef value)
 {
+  CFDictionaryRef attrib;
+  
   CF_OBJC_FUNCDISPATCH3 (_kCFAttributedStringTypeID, void, str,
                          "setAttribute:value:range:", attrName, value, range);
   
   if (!CFAttributedStringIsMutable(str))
     return;
+  
+  attrib = CFDictionaryCreate (NULL, (const void **)&attrName,
+                               (const void **)&value, 1,
+                               &kCFCopyStringDictionaryKeyCallBacks,
+                               &kCFTypeDictionaryValueCallBacks);
+  CFAttributedStringSetAttributes (str, range, attrib, false);
+  CFRelease (attrib);
 }
 
 void
@@ -566,9 +749,67 @@ CFAttributedStringSetAttributes (CFMutableAttributedStringRef str,
                                  CFRange range, CFDictionaryRef repl,
                                  Boolean clearOtherAttribs)
 {
+  CFIndex idxS;
+  CFIndex idxE;
+  CFIndex cur;
+  CFRange rS;
+  CFRange rE;
+  CFIndex rangeMax;
+  Attr *array;
+  
   CF_OBJC_FUNCDISPATCH2 (_kCFAttributedStringTypeID, void, str,
                          "setAttributes:range:", repl, range);
   
   if (!CFAttributedStringIsMutable(str))
     return;
+  
+  array = str->_attribs;
+  rangeMax = range.location + range.length;
+  idxS = CFAttributedStringArrayGetIndex (str, range.location, &rS);
+  idxE = CFAttributedStringArrayGetIndex (str, rangeMax - 1, &rE);
+  cur = idxS;
+  
+  /* Split the last attribute in 2 if new attribute does not fall in a
+   * boundary and the new attributes are different from what's already there.
+   */
+  if (rE.location + rE.length > rangeMax
+      && !CFEqual (array[idxE].attrib, repl))
+    InsertAttributesAtIndex (str, idxE + 1, rangeMax, array[idxE].attrib);
+  
+  if (range.location == rS.location)
+    {
+      if (clearOtherAttribs)
+        ReplaceAttributesAtIndex (str, cur, repl);
+      else
+        SetAttributesAtIndex (str, cur, repl);
+    }
+  else if (!CFEqual (array[idxS].attrib, repl))
+    {
+      /* Only insert a new attribute if the new attribute is different from
+       * the existing attribute
+       */
+      cur += 1;
+      idxE += 1;
+      InsertAttributesAtIndex (str, cur, range.location, repl);
+      if (!clearOtherAttribs)
+        SetAttributesAtIndex (str, cur, array[idxS].attrib);
+    }
+  cur += 1;
+  
+  if (cur <= idxE)
+    {
+      if (clearOtherAttribs)
+        {
+          RemoveAttributesAtIndex (str, CFRangeMake (cur, idxE - cur + 1));
+        }
+      else
+        {
+          do
+            {
+              SetAttributesAtIndex (str, cur++, repl);
+            } while (cur <= idxE);
+        }
+    }
+  
+  CFAttributedStringCoalesce (str, CFRangeMake (idxS, cur));
 }
